--- a/Dockerfile.dind
+++ b/Dockerfile.dind
@@ -1,6 +1,7 @@
 FROM summerwind/actions-runner-dind:latest
 
-RUN sudo apt remove yarn \ 
+RUN curl -sS https://dl.yarnpkg.com/debian/pubkey.gpg | sudo apt-key add - \
+  echo "deb https://dl.yarnpkg.com/debian/ stable main" | sudo tee /etc/apt/sources.list.d/yarn.list \
   && sudo apt update -y \
   && sudo apt install yarn -y \
   && sudo rm -rf /var/lib/apt/lists/*
