--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -23,4 +23,8 @@ jobs:
           DOCKERNAME="infraway/${{ github.event.repository.name }}:${TAG}"
           docker build . -t ${DOCKERNAME} -f Dockerfile.dind
           docker push ${DOCKERNAME}
+          TAG="tests"
+          DOCKERNAME="infraway/${{ github.event.repository.name }}:${TAG}"
+          docker build . -t ${DOCKERNAME} -f Dockerfile.tests
+          docker push ${DOCKERNAME}
           docker logout
