--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -29,6 +29,10 @@ jobs:
           # DOCKERNAME="infraway/${{ github.event.repository.name }}:${TAG}"
           # docker build . -t ${DOCKERNAME} -f Dockerfile.tests
           # docker push ${DOCKERNAME}
+          TAG="arc-runners"
+          DOCKERNAME="infraway/${{ github.event.repository.name }}:${TAG}"
+          docker build . -t ${DOCKERNAME} -f Dockerfile.new
+          docker push ${DOCKERNAME}
           TAG="arc-runners-tests"
           DOCKERNAME="infraway/${{ github.event.repository.name }}:${TAG}"
           docker build . -t ${DOCKERNAME} -f Dockerfile.tests.new
