--- a/Dockerfile.new
+++ b/Dockerfile.new
@@ -1,4 +1,4 @@
-FROM ghcr.io/actions/actions-runner:latest
+FROM ghcr.io/actions/actions-runner:2.327.1
 
 RUN sudo apt update -y \
   && sudo apt install curl wget npm jq -y \
